# autoAPI/swagger/swagger.json
@@ -710,7 +710,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.CompanySearchList"
+                            "$ref": "#/definitions/models.CategoryForSearch"
                         }
                     },
                     "401": {
@@ -4613,7 +4613,7 @@
                 "missions_list": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.MissionEntityToShow"
+                        "$ref": "#/definitions/models.MissionInfo"
                     }
                 },
                 "name": {
@@ -4738,19 +4738,6 @@
                 }
             }
         },
-        "models.MissionEntityToShow": {
-            "title": "MissionEntityToShow",
-            "type": "object",
-            "properties": {
-                "mission_id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "statu": {
-                    "type": "boolean"
-                }
-            }
-        },
         "models.MissionInMissionList": {
             "title": "MissionInMissionList",
             "type": "object",
@@ -4773,6 +4760,38 @@
                     "type": "string"
                 },
                 "mission_status": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.MissionInfo": {
+            "title": "MissionInfo",
+            "type": "object",
+            "properties": {
+                "company_id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "company_logo": {
+                    "type": "string"
+                },
+                "company_name": {
+                    "type": "string"
+                },
+                "deadline": {
+                    "type": "string"
+                },
+                "if_completed": {
+                    "type": "boolean"
+                },
+                "mission_id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "mission_name": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "boolean"
                 }
             }
